--- a/AdventOfCode.FSharp/AdventOfCode.FSharp.fsproj
+++ b/AdventOfCode.FSharp/AdventOfCode.FSharp.fsproj
@@ -9,6 +9,9 @@
         <Compile Include="Shared.fs" />
         <Compile Include="Examples\Day0.fs" />
         <Compile Include="Examples\Day0.Alternative.fs" />
+        <Compile Include="2021\Day1.fs" />
+        <Compile Include="2021\Day2.fs" />
+        <Compile Include="2021\Day3.fs" />
     </ItemGroup>
 
     <ItemGroup>
