--- a/AdventOfCode.FSharp/AdventOfCode.FSharp.fsproj
+++ b/AdventOfCode.FSharp/AdventOfCode.FSharp.fsproj
@@ -8,6 +8,7 @@
     <ItemGroup>
         <Compile Include="Shared.fs" />
         <Compile Include="Template.fs" />
+        <Compile Include="2022\Day1.fs" />
     </ItemGroup>
 
     <ItemGroup>
