--- a/AdventOfCode.FSharp/AdventOfCode.FSharp.fsproj
+++ b/AdventOfCode.FSharp/AdventOfCode.FSharp.fsproj
@@ -9,6 +9,7 @@
         <Compile Include="Shared.fs" />
         <Compile Include="Template.fs" />
         <Compile Include="2022\Day1.fs" />
+        <Compile Include="2022\Day2.fs" />
     </ItemGroup>
 
     <ItemGroup>
