--- a/AdventOfCode.FSharp/AdventOfCode.FSharp.fsproj
+++ b/AdventOfCode.FSharp/AdventOfCode.FSharp.fsproj
@@ -10,6 +10,7 @@
         <Compile Include="Template.fs" />
         <Compile Include="2022\Day1.fs" />
         <Compile Include="2022\Day2.fs" />
+        <Compile Include="2022\Day3.fs" />
     </ItemGroup>
 
     <ItemGroup>
