--- a/AdventOfCode.FSharp/AdventOfCode.FSharp.fsproj
+++ b/AdventOfCode.FSharp/AdventOfCode.FSharp.fsproj
@@ -11,6 +11,7 @@
         <Compile Include="2022\Day1.fs" />
         <Compile Include="2022\Day2.fs" />
         <Compile Include="2022\Day3.fs" />
+        <Compile Include="2022\Day4.fs" />
     </ItemGroup>
 
     <ItemGroup>
