--- a/AdventOfCode.FSharp/AdventOfCode.FSharp.fsproj
+++ b/AdventOfCode.FSharp/AdventOfCode.FSharp.fsproj
@@ -14,6 +14,7 @@
         <Compile Include="2022\Day4.fs" />
         <Compile Include="2022\Day5.fs" />
         <Compile Include="2022\Day6.fs" />
+        <Compile Include="2022\Day7.fs" />
     </ItemGroup>
 
     <ItemGroup>
