--- a/AdventOfCode.CSharp/AdventOfCode.CSharp.csproj
+++ b/AdventOfCode.CSharp/AdventOfCode.CSharp.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
+        <PackageReference Include="Microsoft.Z3" Version="4.12.2" />
         <PackageReference Include="xunit" Version="2.4.1" />
     </ItemGroup>
 
