--- a/AdventOfCode.Core/AdventOfCode.Core.csproj
+++ b/AdventOfCode.Core/AdventOfCode.Core.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="System.CommandLine" Version="2.0.0-beta2.21617.1" />
+        <PackageReference Include="xunit.abstractions" Version="2.0.3" />
     </ItemGroup>
 
 </Project>
